# teleop_xr_ros2_example

./: .envrc  .gitignore  README.md  pixi.toml  pyproject.toml
scripts/: setup.sh
src/starter_package/: package.xml  setup.cfg  setup.py
src/starter_package/starter_package/: hello_node.py
src/teleop_xr_ros2_example/: CMakeLists.txt  README.md  package.xml
src/teleop_xr_ros2_example/config/: teleop_xr_rviz.rviz
src/teleop_xr_ros2_example/launch/: demo.launch.py
src/teleop_xr_ros2_example/scripts/: mock_camera_publisher.py
